fix: test warnings related to a JDK 21+ issue (JEP-451)